# elgato-pedal-controller-linux

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  elgato_pedal_controller.config_example.json
.github/workflows/: ci.yml  release.yml
src/: button_state_machine.rs  button_types.rs  config_file_setup.rs  config_manager.rs  dbus_signaler.rs  hold_intent_input_action_manager.rs  hold_intent_parser.rs  hold_intent_state_machine.rs  input_simulator.rs  key_definitions.rs  main.rs  service_manager.rs  token_based_config.rs
