[package]
name = "elgato_pedal_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
regex = "1.10.3"
serde_json = "1.0.117"
enigo = "0.2.1"

[dependencies]
dbus-async = "~2.3.1"
dbus-message-parser = "4.3.1"
hidapi = "2.6.0"
chrono = "0.4.34"
enigo = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0"
home = "0.5.9"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "~1.15.0"
features = ["rt-multi-thread"]

[dependencies.windows-targets]
version = "0.52.4"

