[package]
name = "elgato-pedal-controller"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wayland = [
    "dep:wayland-client",
    "dep:wayland-protocols-misc",
    "dep:wayland-protocols-wlr",
    "dep:tempfile",
    "dep:nom",
]

[dependencies]
hidapi = "2.6.3"
chrono = "0.4.34"
enigo = { version = "0.5", features = ["serde", "wayland"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ron = "0.10"
anyhow = "1.0"
home = "0.5.9"
tempfile = { version = "3.20.0", optional = true }
nom = { version = "8.0.0", optional = true }
wayland-protocols-misc = { version = "0.3", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
wayland-client = { version = "0.31", optional = true }
xkeysym = "0.2.1"